--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/recordFragment"
-        android:name="ru.dpastukhov.recorder.record.RecordFragment"
+        android:name="ru.dpastukhov.voicerecorder.record.RecordFragment"
         android:label="fragment_record"
         tools:layout="@layout/fragment_record" />
     <fragment
         android:id="@+id/listRecordFragment"
-        android:name="ru.dpastukhov.recorder.listRecord.ListRecordFragment"
+        android:name="ru.dpastukhov.voicerecorder.listRecord.ListRecordFragment"
         android:label="fragment_list_record"
         tools:layout="@layout/fragment_list_record" />
 </navigation>
