--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -30,7 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1"
-            tools:text="00:00"></TextView>
+            tools:text="00:00" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/playButton"
